feat(ocpp): implement OCPP 1.6J remote triggering (#115)
