# adapters/target-ems-scada-http/src/capabilities.rs
@@ -40,6 +40,16 @@ pub(crate) const IMPLEMENTED_RESOURCES: &[IntegrationResource] = &[
         operations: &["read"],
     },
     IntegrationResource {
+        name: "schemas_v1_2",
+        path: "/bridge/v1/schemas/v1.2/{schema}",
+        operations: &["read"],
+    },
+    IntegrationResource {
+        name: "schemas_v1_3",
+        path: "/bridge/v1/schemas/v1.3/{schema}",
+        operations: &["read"],
+    },
+    IntegrationResource {
         name: "stations",
         path: "/bridge/v1/stations",
         operations: &["read"],
